服务注册及服务间调用测试

--- a/gulimall-coupon/src/main/resources/application.yml
+++ b/gulimall-coupon/src/main/resources/application.yml
@@ -7,10 +7,17 @@ spring:
     password: root
     url: jdbc:mysql://localhost:3306/gulimall_sms
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+  application:
+    name: gulimall-coupon
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
       id-type: auto #\u8BBE\u7F6E\u5168\u5C40\u4E3B\u952E\u81EA\u589E
+
 
