--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -7,6 +7,12 @@ spring:
     password: root
     url: jdbc:mysql://localhost:3306/gulimall_pms
     driver-class-name: com.mysql.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+  application:
+    name: gulimall-product
 
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
