--- a/gulimall-product/src/main/resources/application.yml
+++ b/gulimall-product/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://localhost:3306/gulimall_pms
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
@@ -18,5 +18,14 @@ mybatis-plus:
   mapper-locations: classpath*:/mapper/**/*.xml
   global-config:
     db-config:
-      id-type: auto #\u8BBE\u7F6E\u5168\u5C40\u4E3B\u952E\u81EA\u589E
+      id-type: auto #主键自增
+      logic-delete-value: 1
+      logic-not-delete-value: 0
+
+logging:
+  level:
+    com.study.gulimall.product.dao: debug
+
+
+
 
